@@ -8,8 +8,8 @@
 #
 # g2 installation directories
 #
-LIBDIR = /usr/lib
-INCDIR = /usr/include
+LIBDIR = /usr/local/lib
+INCDIR = /usr/local/include
 
 #LIBDIR = $(HOME)/local/lib
 #INCDIR = $(HOME)/local/include
@@ -19,9 +19,9 @@ INCDIR = /usr/include
 #
 SHELL = /bin/sh
 
-CC           = cc
-CFLAGS       = -I./src -g  -I/usr/local/include  -DUNIX=1 -DDO_PS=1 -DDO_X11=1 -DDO_GIF=1 -DSTDC_HEADERS=1 -DHAVE_LIMITS_H=1 
-INSTALL      = /usr/bin/installbsd -c
+CC           = gcc
+CFLAGS       = -I./src -g -O2  -I/usr/X11R6/include -I/usr/local/include  -DLINUX=1 -DDO_PS=1 -DDO_X11=1 -DDO_GIF=1 -DSTDC_HEADERS=1 -DHAVE_LIMITS_H=1 
+INSTALL      = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 FIND         = find
 MAKEDEPEND   = makedepend
@@ -70,6 +70,7 @@ shared: libg2.so
 
 libg2.a: $(OBJ)
 	$(AR) $(ARFLAGS) libg2.a $(OBJ)
+	ln -s libg2.a libg2.0.40.a
 
 libg2.so: $(OBJ)
 	$(CC) -shared -o libg2.so $(OBJ) -lc -lm
@@ -90,6 +91,7 @@ clean:
 	-$(FIND) . -name "*~" -exec rm -f {} \;
 	-(cd ./g2_perl ; make clean)
 	-rm -f ./g2_perl/test.ps ./g2_perl/test.gif
+	-rm -f ./libg2.0.40.a
 
 demo:	libg2.a
 	(cd ./demo ; make)
@@ -103,199 +105,3 @@ depend:
 
 # DO NOT DELETE THIS LINE -- make  depend  depends  on it.
 
-./src/g2_device.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_device.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_device.o: /usr/include/sys/types.h
-./src/g2_device.o: /usr/include/mach/machine/vm_types.h
-./src/g2_device.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_device.o: /usr/include/sys/limits.h
-./src/g2_device.o: /usr/include/sys/machine/machlimits.h
-./src/g2_device.o: /usr/include/sys/syslimits.h
-./src/g2_device.o: /usr/include/sys/machine/machtime.h
-./src/g2_device.o: /usr/include/sys/rt_limits.h ./src/g2.h ./src/g2_device.h
-./src/g2_device.o: ./src/g2_physical_device.h ./src/g2_funix.h
-./src/g2_device.o: ./src/g2_virtual_device.h ./src/g2_util.h
-./src/g2_device.o: /usr/include/stdlib.h
-./src/g2_ui_control.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_ui_control.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_ui_control.o: /usr/include/sys/types.h
-./src/g2_ui_control.o: /usr/include/mach/machine/vm_types.h
-./src/g2_ui_control.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_ui_control.o: /usr/include/sys/limits.h
-./src/g2_ui_control.o: /usr/include/sys/machine/machlimits.h
-./src/g2_ui_control.o: /usr/include/sys/syslimits.h
-./src/g2_ui_control.o: /usr/include/sys/machine/machtime.h
-./src/g2_ui_control.o: /usr/include/sys/rt_limits.h /usr/include/stdlib.h
-./src/g2_ui_control.o: /usr/include/math.h ./src/g2.h ./src/g2_device.h
-./src/g2_ui_control.o: ./src/g2_physical_device.h ./src/g2_funix.h
-./src/g2_ui_control.o: ./src/g2_virtual_device.h ./src/g2_control_pd.h
-./src/g2_util.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_util.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_util.o: /usr/include/sys/types.h
-./src/g2_util.o: /usr/include/mach/machine/vm_types.h
-./src/g2_util.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_util.o: /usr/include/sys/limits.h
-./src/g2_util.o: /usr/include/sys/machine/machlimits.h
-./src/g2_util.o: /usr/include/sys/syslimits.h
-./src/g2_util.o: /usr/include/sys/machine/machtime.h
-./src/g2_util.o: /usr/include/sys/rt_limits.h /usr/include/stdlib.h
-./src/g2_util.o: /usr/include/math.h ./src/g2_util.h
-./src/g2_util.o: ./src/g2_physical_device.h ./src/g2.h ./src/g2_funix.h
-./src/g2_fif.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_fif.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_fif.o: /usr/include/sys/types.h /usr/include/mach/machine/vm_types.h
-./src/g2_fif.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_fif.o: /usr/include/sys/limits.h
-./src/g2_fif.o: /usr/include/sys/machine/machlimits.h
-./src/g2_fif.o: /usr/include/sys/syslimits.h
-./src/g2_fif.o: /usr/include/sys/machine/machtime.h
-./src/g2_fif.o: /usr/include/sys/rt_limits.h /usr/include/string.h
-./src/g2_fif.o: /usr/include/strings.h ./src/g2.h ./src/g2_util.h
-./src/g2_fif.o: /usr/include/stdlib.h ./src/g2_physical_device.h
-./src/g2_fif.o: ./src/g2_funix.h ./src/PS/g2_PS.h ./src/X11/g2_X11.h
-./src/g2_fif.o: ./src/GIF/g2_GIF.h
-./src/g2_virtual_device.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_virtual_device.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_virtual_device.o: /usr/include/sys/types.h
-./src/g2_virtual_device.o: /usr/include/mach/machine/vm_types.h
-./src/g2_virtual_device.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_virtual_device.o: /usr/include/sys/limits.h
-./src/g2_virtual_device.o: /usr/include/sys/machine/machlimits.h
-./src/g2_virtual_device.o: /usr/include/sys/syslimits.h
-./src/g2_virtual_device.o: /usr/include/sys/machine/machtime.h
-./src/g2_virtual_device.o: /usr/include/sys/rt_limits.h
-./src/g2_virtual_device.o: ./src/g2_virtual_device.h ./src/g2_device.h
-./src/g2_virtual_device.o: ./src/g2_physical_device.h ./src/g2.h
-./src/g2_virtual_device.o: ./src/g2_funix.h ./src/g2_util.h
-./src/g2_virtual_device.o: /usr/include/stdlib.h
-./src/g2_physical_device.o: /usr/include/stdlib.h /usr/include/standards.h
-./src/g2_physical_device.o: /usr/include/getopt.h /usr/include/sys/types.h
-./src/g2_physical_device.o: /usr/include/mach/machine/vm_types.h
-./src/g2_physical_device.o: /usr/include/sys/select.h /usr/include/stdio.h
-./src/g2_physical_device.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_physical_device.o: /usr/include/sys/limits.h
-./src/g2_physical_device.o: /usr/include/sys/machine/machlimits.h
-./src/g2_physical_device.o: /usr/include/sys/syslimits.h
-./src/g2_physical_device.o: /usr/include/sys/machine/machtime.h
-./src/g2_physical_device.o: /usr/include/sys/rt_limits.h
-./src/g2_physical_device.o: ./src/g2_physical_device.h ./src/g2.h
-./src/g2_physical_device.o: ./src/g2_funix.h ./src/g2_util.h
-./src/g2_graphic_pd.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_graphic_pd.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_graphic_pd.o: /usr/include/sys/types.h
-./src/g2_graphic_pd.o: /usr/include/mach/machine/vm_types.h
-./src/g2_graphic_pd.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_graphic_pd.o: /usr/include/sys/limits.h
-./src/g2_graphic_pd.o: /usr/include/sys/machine/machlimits.h
-./src/g2_graphic_pd.o: /usr/include/sys/syslimits.h
-./src/g2_graphic_pd.o: /usr/include/sys/machine/machtime.h
-./src/g2_graphic_pd.o: /usr/include/sys/rt_limits.h /usr/include/stdlib.h
-./src/g2_graphic_pd.o: /usr/include/math.h ./src/g2_funix.h
-./src/g2_graphic_pd.o: ./src/g2_virtual_device.h ./src/g2_graphic_pd.h
-./src/g2_graphic_pd.o: ./src/g2_physical_device.h ./src/g2.h
-./src/g2_graphic_pd.o: ./src/g2_control_pd.h ./src/g2_util.h
-./src/g2_control_pd.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_control_pd.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_control_pd.o: /usr/include/sys/types.h
-./src/g2_control_pd.o: /usr/include/mach/machine/vm_types.h
-./src/g2_control_pd.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_control_pd.o: /usr/include/sys/limits.h
-./src/g2_control_pd.o: /usr/include/sys/machine/machlimits.h
-./src/g2_control_pd.o: /usr/include/sys/syslimits.h
-./src/g2_control_pd.o: /usr/include/sys/machine/machtime.h
-./src/g2_control_pd.o: /usr/include/sys/rt_limits.h /usr/include/stdlib.h
-./src/g2_control_pd.o: /usr/include/math.h ./src/g2.h ./src/g2_device.h
-./src/g2_control_pd.o: ./src/g2_physical_device.h ./src/g2_funix.h
-./src/g2_control_pd.o: ./src/g2_virtual_device.h ./src/g2_util.h
-./src/g2_ui_graphic.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_ui_graphic.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_ui_graphic.o: /usr/include/sys/types.h
-./src/g2_ui_graphic.o: /usr/include/mach/machine/vm_types.h
-./src/g2_ui_graphic.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_ui_graphic.o: /usr/include/sys/limits.h
-./src/g2_ui_graphic.o: /usr/include/sys/machine/machlimits.h
-./src/g2_ui_graphic.o: /usr/include/sys/syslimits.h
-./src/g2_ui_graphic.o: /usr/include/sys/machine/machtime.h
-./src/g2_ui_graphic.o: /usr/include/sys/rt_limits.h ./src/g2_device.h
-./src/g2_ui_graphic.o: ./src/g2_physical_device.h ./src/g2.h ./src/g2_funix.h
-./src/g2_ui_graphic.o: ./src/g2_virtual_device.h ./src/g2_graphic_pd.h
-./src/g2_ui_graphic.o: ./src/g2_util.h /usr/include/stdlib.h
-./src/g2_ui_virtual_device.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/types.h
-./src/g2_ui_virtual_device.o: /usr/include/mach/machine/vm_types.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/limits.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/machine/machlimits.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/syslimits.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/machine/machtime.h
-./src/g2_ui_virtual_device.o: /usr/include/sys/rt_limits.h ./src/g2.h
-./src/g2_ui_virtual_device.o: ./src/g2_device.h ./src/g2_physical_device.h
-./src/g2_ui_virtual_device.o: ./src/g2_funix.h ./src/g2_virtual_device.h
-./src/g2_ui_virtual_device.o: ./src/g2_util.h /usr/include/stdlib.h
-./src/g2_ui_device.o: /usr/include/stdio.h /usr/include/standards.h
-./src/g2_ui_device.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/g2_ui_device.o: /usr/include/sys/types.h
-./src/g2_ui_device.o: /usr/include/mach/machine/vm_types.h
-./src/g2_ui_device.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/g2_ui_device.o: /usr/include/sys/limits.h
-./src/g2_ui_device.o: /usr/include/sys/machine/machlimits.h
-./src/g2_ui_device.o: /usr/include/sys/syslimits.h
-./src/g2_ui_device.o: /usr/include/sys/machine/machtime.h
-./src/g2_ui_device.o: /usr/include/sys/rt_limits.h ./src/g2.h
-./src/g2_ui_device.o: ./src/g2_funix.h ./src/g2_device.h
-./src/g2_ui_device.o: ./src/g2_physical_device.h ./src/g2_virtual_device.h
-./src/PS/g2_PS.o: /usr/include/stdio.h /usr/include/standards.h
-./src/PS/g2_PS.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/PS/g2_PS.o: /usr/include/sys/types.h
-./src/PS/g2_PS.o: /usr/include/mach/machine/vm_types.h
-./src/PS/g2_PS.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/PS/g2_PS.o: /usr/include/sys/limits.h
-./src/PS/g2_PS.o: /usr/include/sys/machine/machlimits.h
-./src/PS/g2_PS.o: /usr/include/sys/syslimits.h
-./src/PS/g2_PS.o: /usr/include/sys/machine/machtime.h
-./src/PS/g2_PS.o: /usr/include/sys/rt_limits.h /usr/include/stdlib.h
-./src/PS/g2_PS.o: /usr/include/stdarg.h /usr/include/limits.h ./src/g2.h
-./src/PS/g2_PS.o: ./src/g2_device.h ./src/g2_physical_device.h
-./src/PS/g2_PS.o: ./src/g2_funix.h ./src/g2_virtual_device.h ./src/g2_util.h
-./src/PS/g2_PS.o: ./src/g2_config.h ./src/PS/g2_PS.h ./src/PS/g2_PS_P.h
-./src/PS/g2_PS.o: ./src/PS/g2_PS_funix.h ./src/PS/g2_PS_definitions.h
-./src/X11/g2_X11.o: /usr/include/stdio.h /usr/include/standards.h
-./src/X11/g2_X11.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/X11/g2_X11.o: /usr/include/sys/types.h
-./src/X11/g2_X11.o: /usr/include/mach/machine/vm_types.h
-./src/X11/g2_X11.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/X11/g2_X11.o: /usr/include/sys/limits.h
-./src/X11/g2_X11.o: /usr/include/sys/machine/machlimits.h
-./src/X11/g2_X11.o: /usr/include/sys/syslimits.h
-./src/X11/g2_X11.o: /usr/include/sys/machine/machtime.h
-./src/X11/g2_X11.o: /usr/include/sys/rt_limits.h /usr/include/stdlib.h
-./src/X11/g2_X11.o: /usr/include/stdarg.h /usr/include/limits.h
-./src/X11/g2_X11.o: /usr/include/math.h /usr/include/string.h
-./src/X11/g2_X11.o: /usr/include/strings.h /usr/include/X11/Xlib.h
-./src/X11/g2_X11.o: /usr/include/X11/X.h /usr/include/X11/Xfuncproto.h
-./src/X11/g2_X11.o: /usr/include/X11/Xosdefs.h /usr/include/stddef.h
-./src/X11/g2_X11.o: /usr/include/X11/Xutil.h ./src/g2_device.h
-./src/X11/g2_X11.o: ./src/g2_physical_device.h ./src/g2.h ./src/g2_funix.h
-./src/X11/g2_X11.o: ./src/g2_virtual_device.h ./src/g2_util.h
-./src/X11/g2_X11.o: ./src/X11/g2_X11_P.h ./src/X11/g2_X11.h
-./src/X11/g2_X11.o: ./src/X11/g2_X11_funix.h ./src/g2_config.h
-./src/GIF/g2_GIF.o: /usr/include/stdio.h /usr/include/standards.h
-./src/GIF/g2_GIF.o: /usr/include/sys/seek.h /usr/include/va_list.h
-./src/GIF/g2_GIF.o: /usr/include/sys/types.h
-./src/GIF/g2_GIF.o: /usr/include/mach/machine/vm_types.h
-./src/GIF/g2_GIF.o: /usr/include/sys/select.h /usr/include/getopt.h
-./src/GIF/g2_GIF.o: /usr/include/sys/limits.h
-./src/GIF/g2_GIF.o: /usr/include/sys/machine/machlimits.h
-./src/GIF/g2_GIF.o: /usr/include/sys/syslimits.h
-./src/GIF/g2_GIF.o: /usr/include/sys/machine/machtime.h
-./src/GIF/g2_GIF.o: /usr/include/sys/rt_limits.h /usr/include/stdlib.h
-./src/GIF/g2_GIF.o: /usr/include/math.h ./src/g2.h ./src/g2_device.h
-./src/GIF/g2_GIF.o: ./src/g2_physical_device.h ./src/g2_funix.h
-./src/GIF/g2_GIF.o: ./src/g2_virtual_device.h ./src/g2_util.h
-./src/GIF/g2_GIF.o: ./src/g2_config.h ./src/GIF/g2_GIF_P.h
-./src/GIF/g2_GIF.o: /usr/local/include/gd.h /usr/local/include/gdfontt.h
-./src/GIF/g2_GIF.o: /usr/local/include/gdfonts.h
-./src/GIF/g2_GIF.o: /usr/local/include/gdfontmb.h
-./src/GIF/g2_GIF.o: /usr/local/include/gdfontl.h /usr/local/include/gdfontg.h
-./src/GIF/g2_GIF.o: ./src/GIF/g2_GIF.h ./src/GIF/g2_GIF_funix.h
